# twitch-dono-clock

./: .gitignore  .pre-commit-config.yaml  README.md  print_resume_clocks.py  pyproject.toml  settings.toml.example  test_tracker.py
twitch_dono_clock/: config.py  donos.py  end.py  pause.py  spins.py  utils.py
