[tool.poetry]
name = "twitch-dono-clock"
version = "0.0.1"
description = "Twitch donothon clock based on reading chat"
authors = ["Latent Logic <lat.logic@gmail.com>"]
readme = "README.md"
packages = [{include = "twitch_dono_clock"}]

[tool.poetry.dependencies]
python = "^3.9"
twitchAPI = "^4.0.0"
aiofiles = "^23.2.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
