[tool.poetry]
name = "twitch-dono-clock"
version = "0.1.0"
description = "Twitch donothon clock based on reading chat"
authors = ["Latent Logic <lat.logic@gmail.com>"]
readme = "README.md"
packages = [{include = "twitch_dono_clock"}]

[tool.poetry.dependencies]
python = "^3.10"
twitchAPI = "^4.5.0"
aiofiles = "^25.1.0"
toml = "^0.10.2"
fastapi = {extras = ["standard-no-fastapi-cloud-cli"], version = "^0.128.0"}
uvicorn = "^0.40.0"
websockets = "^16.0"
pydantic = "^2.12.5"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
